2002-07-29  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/psp.py: added

2002-07-28  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/pycgi.py (_fix): dumb error in determining
	SCRIPT_NAME 

2002-07-28  Andrew Csillag  <drew@localhost.localdomain>

	* docs/devel/devel.tex: revamping

	* docs/paper-letter/Makefile, docs/html/Makefile: added stuff for
	tutorial

2002-07-28  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/PyDO/PyDO.tex (chapter{Operators}): more information about
	operators. 

	* SkunkWeb/Services/rewrite.py (ExtraPathFinder): added a dynamic
	rewriter for finding extra path info.

2002-07-27  Andrew Csillag  <drew@localhost.localdomain>

	* util/make_distr.py (doc_cmds): made it so that it builds the
	documentation before tarring everything up

2002-07-25  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/sample_webdocs/demo/geeknews/index.html: commented out
	lwn related stuff as it is closing it's doors on 8/1/02

	* configure, configure.in: added stuff pertaining to --with-runasroot

	* SkunkWeb/skunkweb.py.in: put in safety check so that if skunkweb
	is started by root, and the installation owner is not root and
	userToRunAs is *not* set, we refuse to run.

	* SkunkWeb/swmgr.in: added -r option so you can make it as if you
	specified --with-runasroot during configuration

	* SkunkWeb/sw.conf.in: made it so that if you specify --with-runasroot,
	it will auto-set the userToRunAs and groupToRunAs

	* pylibs/Logger.py (logException): now adds exception info

	* SkunkWeb/SkunkWeb/bootloader.py.in (_stupidfunc): added pwd and grp
	so they don't get whacked on restart

	* SkunkWeb/sw.conf.in: added docs for userToRunAs and groupToRunAs

	* SkunkWeb/skunkweb.py.in: now switches euid/egid as appropriate

	* SkunkWeb/SkunkWeb/Server.py (addService): made it do uid switching

	* SkunkWeb/configure.in, SkunkWeb/configure:  added stuff to support 
	--with-runasroot

	* SkunkWeb/swmgr.in: added stuff to support --with-runasroot